fix list font and list image spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -149,7 +149,6 @@ body {
 .post {
   display: block;
   position: relative;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
 
   width: 100%;
@@ -186,19 +185,21 @@ body {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
-  align-content: flex-start;
+  box-sizing: border-box;
 }
 
 .list-item {
   width: 45%;
   position: relative;
-  padding: 12px 0;
+  padding: 12px 2%;
   overflow: hidden;
   filter: grayscale(1);
   transition: filter $TRANSITION-PERIOD linear;
+  box-sizing: border-box;
 
   @include media-query(DESKTOP) {
     width: 30%;
+    padding: 12px 1%;
   }
 
   &:hover {
@@ -216,6 +217,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   border-radius: 5px;
+  box-sizing: border-box;
 }
 
 .list-title {
@@ -224,10 +226,13 @@ body {
   width: 100%;
   height: 100%;
   top: 0;
+  left: 0;
   display: flex;
   align-content: center;
   justify-content: center;
   align-items: center;
+  box-sizing: border-box;
+  padding: 0 12px;
 
   text-align: center;
   font-size: 14px;
@@ -289,14 +294,11 @@ body {
   display: none;
 
   @include media-query(DESKTOP) {
-    display: -webkit-flex;
     display: flex;
   }
 
-  -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
+  justify-content: center;
 
   margin-top: $LIST-SPACING/2;
   margin-bottom: $LIST-SPACING*2;
@@ -308,7 +310,7 @@ body {
 }
 
 .filter-active {
-  border-bottom: 4px solid #000;
+  border-bottom: 3px solid $TEXT-COLOR;
 }
 
 .selector-button {
